Fixed import/export problem

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Fawry Internship Challenge</title>
   </head>
   <body>
-    <script src="Fawry.js"></script>
+    <script type="module" src="Fawry.js"></script>
   </body>
 </html>
