added expirable-shippable product class

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <script type="module" src="Fawry.js"></script>
+    <!-- <script type="module" src="expirableShippableProduct.js"></script> -->
   </body>
 </html>
