customer - cart classes edited

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Fawry Internship Challenge</title>
   </head>
   <body>
-    <script type="module" src="Fawry.js"></script>
+    <script type="module" src="Customer.js"></script>
     <!-- <script type="module" src="expirableShippableProduct.js"></script> -->
   </body>
 </html>
